@@ -1,3 +1,10 @@
+Thu Feb 22 19:53:55 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): Grab
+	on a offscreen GtkInvisible so that we can move handle boxes
+	whose parents are iconified or on another desktop. Also,
+	make sure we don't reattach to such parents. (#1923)
+
 Thu Feb 22 17:07:58 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkmenu.c (gtk_menu_popup): Don't flip cursor. (#50934)
